[Add] #14 - dismiss 이미지 에셋 추가

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -23,6 +23,8 @@ included:
 excluded:
 - HwanYulMate/Application/AppDelegate.swift
 - HwanYulMate/Application/SceneDelegate.swift
+- HwanYulMate/Presentation/HomeDetail/HomeDetailCell.swift
+- HwanYulMate/Presentation/HomeDetail/BottomSheet/*
 
 trailing_whitespace:
   ignores_empty_lines: true
