--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -30,6 +30,9 @@ excluded:
 trailing_whitespace:
   ignores_empty_lines: true
 
+identifier_name:
+  min_length: 2
+
 force_cast: warning
 force_try:
   severity: warning
