--- a/HwanYulMate/Resource/Info.plist
+++ b/HwanYulMate/Resource/Info.plist
@@ -4,6 +4,17 @@
 <dict>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.300634962913-5228e9k685earqujag8empn7m1f67ar5</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>300634962913-5228e9k685earqujag8empn7m1f67ar5.apps.googleusercontent.com</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
