[Chore] #30 - Google 로그인, FCM 관련 설정

--- a/HwanYulMate/Resource/Info.plist
+++ b/HwanYulMate/Resource/Info.plist
@@ -13,6 +13,8 @@
 			</array>
 		</dict>
 	</array>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 	<key>GIDClientID</key>
 	<string>300634962913-5228e9k685earqujag8empn7m1f67ar5.apps.googleusercontent.com</string>
 	<key>NSAppTransportSecurity</key>
@@ -49,5 +51,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
